--- a/Hug/Hug.csproj
+++ b/Hug/Hug.csproj
@@ -107,6 +107,7 @@
     <Content Include="Resources\hug.png" />
     <Content Include="Resources\preview.png">
       <IncludeInVSIX>true</IncludeInVSIX>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
